Refactor diagnostic in declgenETS2TS
Description:
1. Replace throw with log error
2. Support diagnostic engine inside declgenETS2TS
3. Move all DeclgenETS2TS's diagnstics into yaml files

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBLQ2U

Signed-off-by: Sergey Chernykh <chernykh.sergey1@huawei.com>

--- a/ets2panda/util/diagnostic/diagnostic.h.erb
+++ b/ets2panda/util/diagnostic/diagnostic.h.erb
@@ -58,14 +58,8 @@ private:
     const uint32_t id_;
     const std::string_view message_;
 };
-% error_types = {
-%     :syntax => 'SYNTAX',
-%     :semantic => 'SEMANTIC',
-%     :warning => 'WARNING',
-%     :fatal => 'FATAL'
-% }
 % Diagnostic::diagnostics.each do |desc|
-    constexpr static DiagnosticKind <%= desc.name %> {util::DiagnosticType::<%= error_types[desc.type] %>, <%= desc.id %>, "<%= desc.message %>"};
+    constexpr static DiagnosticKind <%= desc.name %> {util::DiagnosticType::<%= desc.type.upcase %>, <%= desc.id %>, "<%= desc.message %>"};
 % end
 } // namespace ark::es2panda::diagnostic
 
