--- a/ets2panda/public/es2panda_lib.idl.erb
+++ b/ets2panda/public/es2panda_lib.idl.erb
@@ -187,6 +187,7 @@ interface es2panda_Impl {
     void AstNodeRecheck(es2panda_Context ctx, AstNode node);
     Es2pandaEnum Es2pandaEnumFromString(es2panda_Context ctx, String str);
     String Es2pandaEnumToString(es2panda_Context ctx, Es2pandaEnum id);
+    AstNode DeclarationFromIdentifier(es2panda_Context ctx, Identifier node);
 
 % Es2pandaLibApi::ast_nodes&.each do |ast_node|
 %   if ast_node != 'AstNode' && ast_node != 'TypeNode'
