--- a/ets2panda/public/es2panda_lib.idl.erb
+++ b/ets2panda/public/es2panda_lib.idl.erb
@@ -190,6 +190,7 @@ interface es2panda_Impl {
     sequence<ir.AstNode> AllDeclarationsByNameFromProgram(es2panda_Context ctx, es2panda_Program program, String name);
     void InsertETSImportDeclarationAndParse(es2panda_Context context, es2panda_Program program,
                                             ETSImportDeclaration node);
+    i32 GenerateStaticDeclarationsFromContext(es2panda_Context context, String outputPath);
 
 % Es2pandaLibApi::ast_nodes&.each do |ast_node|
 %   if ast_node != 'AstNode' && ast_node != 'TypeNode'
