--- a/ets2panda/public/es2panda_lib_impl.inc.erb
+++ b/ets2panda/public/es2panda_lib_impl.inc.erb
@@ -186,7 +186,7 @@ char const *AstNodeName(es2panda_AstNode *ast)
     return "Unknown AstNode";
 }
 
-// NOLINTBEGIN(performance-for-range-copy)
+// NOLINTBEGIN(performance-for-range-copy, readability-identifier-naming)
 % Es2pandaLibApi::classes&.each do |namespaceName, namespaceClasses|
 % namespaceClasses&.each do |className, classData|
 
@@ -306,5 +306,5 @@ then structData.call_cast["call_var_str"] end %>/*return_args:*/<%= method_info[
 
 
 % Es2pandaLibApi::print_stats
-// NOLINTEND(performance-for-range-copy)
+// NOLINTEND(performance-for-range-copy, readability-identifier-naming)
 // NOLINTEND(cppcoreguidelines-pro-bounds-pointer-arithmetic, readability-non-const-parameter)
