--- a/ets2panda/lexer/templates/token.inl.erb
+++ b/ets2panda/lexer/templates/token.inl.erb
@@ -37,7 +37,7 @@ const char *TokenToString(TokenType type)  // NOLINT(readability-function-size)
         case TokenType::JS_DOC_END:
             return "*/";
         case TokenType::EOS:
-            return "eos";
+            return "end of stream";
         default:
             ES2PANDA_UNREACHABLE();
     }
