--- a/ets2panda/public/es2panda_lib.idl.erb
+++ b/ets2panda/public/es2panda_lib.idl.erb
@@ -188,6 +188,7 @@ interface es2panda_Impl {
     Es2pandaEnum Es2pandaEnumFromString(es2panda_Context ctx, String str);
     String Es2pandaEnumToString(es2panda_Context ctx, Es2pandaEnum id);
     AstNode DeclarationFromIdentifier(es2panda_Context ctx, Identifier node);
+    void InsertETSImportDeclarationAfterParse(es2panda_Context context, ETSImportDeclaration node);
 
 % Es2pandaLibApi::ast_nodes&.each do |ast_node|
 %   if ast_node != 'AstNode' && ast_node != 'TypeNode'
