Fix for predefined types
Predefined types cannot be used as valid identifiers
Issue: #IBYOA4
Fixes 22987 internal issue

Change-Id: I3c0511358dc6dbbbb1ca3c2989ea661915da4c63
Signed-off-by: Robert Sipka <robert.sipka@h-lab.eu>

--- a/ets2panda/lexer/templates/keywords.h.erb
+++ b/ets2panda/lexer/templates/keywords.h.erb
@@ -44,7 +44,7 @@ public:
     }
 
     void ScanKeyword(char32_t cp) override {
-        ES2PANDA_ASSERT(cp >= 'a' && cp <= 'z');
+        ES2PANDA_ASSERT((cp >= 'a' && cp <= 'z') || (cp >= 'A' && cp <= 'Z'));
         switch(cp) {
 %   desc['all_word_starts'].each do |cp|
         case '<%=cp%>': Scan_<%=cp%>(); break;
