--- a/ets2panda/public/es2panda_lib.idl.erb
+++ b/ets2panda/public/es2panda_lib.idl.erb
@@ -19,6 +19,7 @@ typedef (String or f64 or boolean) es2panda_variantDoubleCharArrayBool;
 
 [Entity=Class] interface es2panda_Config {};
 [Entity=Class] interface es2panda_Context {};
+[Entity=Class] interface es2panda_GlobalContext {};
 [Entity=Class] interface es2panda_Program {};
 [Entity=Class] interface es2panda_ExternalSource {};
 [Entity=Class] interface es2panda_ArkTsConfig {};
@@ -171,9 +172,13 @@ interface es2panda_Impl {
     es2panda_Options ConfigGetOptions(es2panda_Config config);
 
     es2panda_Context CreateContextFromFile(es2panda_Config config, String source_file_name);
+    es2panda_Context CreateCacheContextFromFile(es2panda_Config config, String source_file_name, es2panda_GlobalContext globalContext, boolean isExternal);
     es2panda_Context CreateContextFromString(es2panda_Config config, String source, String file_name);
+    es2panda_Context CreateCacheContextFromString(es2panda_Config config, String source, String file_name, es2panda_GlobalContext globalContext, boolean isExternal);
     es2panda_Context ProceedToState(es2panda_Context context, es2panda_ContextState state);  // context is consumed
     void DestroyContext(es2panda_Context context);
+    es2panda_GlobalContext CreateGlobalContext(es2panda_Config config, sequence<String> externalFileList, u32 fileNum, boolean LspUsage);
+    void DestroyGlobalContext(es2panda_GlobalContext globalContext);
 
     es2panda_ContextState ContextState(es2panda_Context context);
     String ContextErrorMessage(es2panda_Context context);
@@ -216,6 +221,9 @@ interface es2panda_Impl {
     void InsertETSImportDeclarationAndParse(es2panda_Context context, es2panda_Program program,
                                             ETSImportDeclaration node);
     i32 GenerateStaticDeclarationsFromContext(es2panda_Context context, String outputPath);
+    void InvalidateFileCache(es2panda_GlobalContext globalContext, String fileName);
+    void RemoveFileCache(es2panda_GlobalContext globalContext, String fileName);
+    void AddFileCache(es2panda_GlobalContext globalContext, String fileName);
 
 % Es2pandaLibApi::ast_nodes&.each do |ast_node|
 %   if ast_node != 'AstNode' && ast_node != 'TypeNode'
