Print all error messages in build_system
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICDGSM

Signed-off-by: dongchao <dongchao46@huawei.com>
Change-Id: Idecd716de616d368f5e18d8aca1879b21ca9d15b

--- a/ets2panda/public/es2panda_lib.idl.erb
+++ b/ets2panda/public/es2panda_lib.idl.erb
@@ -169,6 +169,7 @@ typedef u64 Es2panda<%= name %>;
 interface es2panda_Impl {
     es2panda_Config CreateConfig(i32 argc, sequence<String> argv);
     void DestroyConfig(es2panda_Config config);
+    String GetAllErrorMessages(es2panda_Context context);
     es2panda_Options ConfigGetOptions(es2panda_Config config);
 
     es2panda_Context CreateContextFromFile(es2panda_Config config, String source_file_name);
