--- a/ets2panda/public/es2panda_lib.idl.erb
+++ b/ets2panda/public/es2panda_lib.idl.erb
@@ -173,6 +173,7 @@ interface es2panda_Impl {
 
     es2panda_Context CreateContextFromFile(es2panda_Config config, String source_file_name);
     es2panda_Context CreateContextFromString(es2panda_Config config, String source, String file_name);
+    es2panda_Context CreateContextGenerateAbcForExternalSourceFiles(es2panda_Config config, i32 fileNamesCount, sequence<String> fileNames);
     es2panda_Context ProceedToState(es2panda_Context context, es2panda_ContextState state);  // context is consumed
     void DestroyContext(es2panda_Context context);
 
