--- a/ets2panda/public/es2panda_lib.idl.erb
+++ b/ets2panda/public/es2panda_lib.idl.erb
@@ -216,6 +216,9 @@ interface es2panda_Impl {
     Es2pandaEnum Es2pandaEnumFromString(es2panda_Context ctx, String str);
     String Es2pandaEnumToString(es2panda_Context ctx, Es2pandaEnum id);
     ir.AstNode DeclarationFromIdentifier(es2panda_Context ctx, ir.Identifier node);
+    boolean IsImportTypeKind(es2panda_Context ctx, ir.AstNode node);
+    String JsdocStringFromDeclaration(es2panda_Context ctx, ir.AstNode node);
+    String GetLicenseFromRootNode(es2panda_Context ctx, ir.AstNode node);
     ir.AstNode FirstDeclarationByNameFromNode(es2panda_Context ctx, ir.AstNode node, String name);
     ir.AstNode FirstDeclarationByNameFromProgram(es2panda_Context ctx, es2panda_Program program, String name);
     sequence<ir.AstNode> AllDeclarationsByNameFromNode(es2panda_Context ctx, ir.AstNode node, String name);
